@@ -1,14 +1,12 @@
 usr/bin/knode
 usr/lib/kde4/kcm_knode.so
 usr/lib/kde4/knodepart.so
-usr/lib/kde4/kontact_knodeplugin.so
 usr/lib/libknodecommon.so.4
 usr/lib/libknodecommon.so.4.*
 usr/share/applications/kde4/KNode.desktop
 usr/share/icons/hicolor/*/apps/knode.*
 usr/share/kde4/apps/kconf_update/knode.upd
 usr/share/kde4/apps/knode/
-usr/share/kde4/apps/kontact/ksettingsdialog/knode.setdlg
 usr/share/kde4/services/knode_config_accounts.desktop
 usr/share/kde4/services/knode_config_appearance.desktop
 usr/share/kde4/services/knode_config_cleanup.desktop
@@ -16,4 +14,3 @@ usr/share/kde4/services/knode_config_identity.desktop
 usr/share/kde4/services/knode_config_post_news.desktop
 usr/share/kde4/services/knode_config_privacy.desktop
 usr/share/kde4/services/knode_config_read_news.desktop
-usr/share/kde4/services/kontact/knodeplugin.desktop
